--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ html {
 
 :root {
     --primary-color: #9d2a41;    /* A nice Teal */
-    --secondary-color: #482653;  /* A dark Navy */
+    --secondary-color: rgb(225, 216, 31);  /* A dark Navy */
     --accent-color: #e9c46a;     /* A warm Gold */
     --text-main: #333333;
 }
